--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "firebase": "^10.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
+    "react-youtube-background": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
